# PelandoBot

./: .dockerignore  Dockerfile  README.md  bot.py  docker-compose.yml  promotion_query.py  promotion_scraper.py  pyproject.toml  requirements.txt  requirements_tests.txt  send_promotions.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build-push-deploy.yaml  build-push.yaml  deployment.yaml  tests.yaml
src/PelandoBot/: bot.py  promotion_scraper.py  send_promotions.py
src/PelandoBot/tgbot/: config.py
src/PelandoBot/tgbot/callbacks/: callback_tags.py
src/PelandoBot/tgbot/filters/: __init__.py  admin_filter.py
src/PelandoBot/tgbot/handlers/: help.py  promo.py  start.py  stop.py  tags.py
src/PelandoBot/tgbot/middlewares/: __init__.py  antiflood_middleware.py  group_migration_check.py
src/PelandoBot/tgbot/states/: __init__.py  register_state.py
src/pelandobot/: bot.py  promotion_scraper.py  send_promotions.py
src/pelandobot/app/: Dockerfile  bot.py
src/pelandobot/promo_sender/: Dockerfile  send_promotions.py
src/pelandobot/scraper/: Dockerfile  promotion_scraper.py
src/pelandobot/tgbot/: config.py
tests/: conftest.py  mock_data.json  test_bot.py  test_promotion_scraper.py  testing_variables.py  variables_and_parameters.py
tgbot/: config.py
tgbot/callbacks/: callback_tags.py
tgbot/filters/: admin_filter.py
tgbot/handlers/: help.py  promo.py  start.py  stop.py  tags.py  user.py
tgbot/middlewares/: antiflood_middleware.py  group_migration_check.py
tgbot/states/: register_state.py
tgbot/utils/: database.py
(+6 files in other folders)
