[metadata]
name = pelandobot
description = A simple Telegram bot that delivers notifications on discounts, promo codes, etc, that appears in the Pelando website.
author = Gustavo Justo
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pelandobot
install_requires =
    aiodns>=3.0.0
    aiohttp>=3.8.3
    aioredis>=2.0.1
    aiosignal>=1.3.1
    async-timeout>=4.0.2
    attrs>=22.2.0
    certifi>=2022.12.7
    cffi>=1.15.1
    charset-normalizer>=2.1.1
    frozenlist>=1.3.3
    idna>=3.4
    multidict>=6.0.4
    pycares>=4.3.0
    pycparser>=2.21
    pyTelegramBotAPI>=4.8.0
    python-dotenv>=0.21.0
    redis>=4.4.0
    requests>=2.28.1
    typing_extensions>=4.4.0
    urllib3>=1.26.13
    yarl>=1.8.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.0.0
    tox>=4.0.16
    pytest>=7.2.0
    pytest-cov>=4.0.0
    black>=22.12.0

[flake8]
max-line-length = 105
extend-ignore = E203
